# toy2-decomp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.py  decomp_utils.py  reccmp-project.yml
.github/workflows/: build-tools.yml
docs/: linux-decomp.md  windows-decomp.md
src/: Common.h  DrawingDevice.cpp  DrawingDevice.h  FileUtils.cpp  InputManager.cpp  LibraryMSVC.h  Logger.cpp  ModeSelect.cpp  Nullsub.cpp  Numerics.cpp  Numerics.h  NumericsFixedTrigLUT.inc  SaveManager.cpp  SaveManager.h  SoftwareRenderer.cpp  SoftwareRenderer.h
src/NGNLoader/: NGNLoader.cpp  NGNLoader.h  ObjectLoad.cpp  ObjectLoad.h
src/Nu3D/: BmpDataNode.cpp  BmpDataNode.h  Camera.cpp  Camera.h  Creature.h  Font.cpp  Font.h  Light.cpp  Light.h  Link.cpp  Link.h  Material.cpp  Material.h  Math.cpp  Math.h  Nu3D.cpp  Nu3D.h  Patch.cpp  Patch.h  Portal.cpp  Portal.h  Primitive.cpp  Primitive.h  Scene.cpp  Scene.h  Sprite.h  Viewport.cpp  Viewport.h
src/Renderer/: Glue.cpp  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h
src/Toy2/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  D3DApp.cpp  MainMenu.cpp  Toy2.cpp
tools/: decomp  decomp-report-template.html  decomp.ps1  decomp_annotations.py  generate-decomp-report.py  ghidra_sync.py  linux-decomp-env.sh  provision-directx.py  setup-linux-decomp.sh  setup-windows-decomp.ps1  smoke-test-linux.sh
tools/Resources/: functions_map.txt
tools/ghidra_sync/: __init__.py  diff_engine.py  ghidra_client.py  headless_apply.py  manifest.py  map_check.py  models.py  reccmp_reader.py  type_sync.py
tools/tests/: test_decomp_annotations.py  test_generate_decomp_report.py  test_ghidra_sync.py
